added image size

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 						<img src="./assets/images/slider/banner-slide-1-man-min.jpg" class="d-block w-100" alt="Banner image1 man">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/banner-slide-2-peoples-min.jpg" class="d-block w-100" alt="Banner image2 peoples">
+						<img src="./assets/images/slider/banner-slide-2-peoples-min.jpg" class="d-block w-100" alt="Banner image2 peoples" width="956" height="446">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/banner-slide-3-marriage-min.jpg" class="d-block w-100" alt="Banner image3 marriage ">
@@ -60,7 +60,7 @@
 	<main>
 		<section id="about">
 				<div class="picture left">
-					<img src="./assets/images/nina-min.png" alt="image Nina Carducci">
+					<img src="./assets/images/nina-min.png" alt="image Nina Carducci" width="382" height="382">
 				</div>
 				<div id="about-me">
 					<h2 class="about-me__title">A propos de moi</h2>
@@ -152,7 +152,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera-min.png" alt="Camera">
+					<img src="./assets/images/camera-min.png" alt="Camera" width="420" height="420" >
 				</div>
 			</div>
 		</section>
