changed section to div tag for quote

--- a/index.html
+++ b/index.html
@@ -128,14 +128,14 @@
 				</article>
 			</div>
 		</section>
-		<section class="quote">
+		<div class="quote">
 			<figure>
 				<blockquote>
 					<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
 				</blockquote>
 				<figcaption class="quote__author">- Richard Avedon</figcaption>
 			</figure>
-		</section>
+		</div>
 		<section id="contact">
 			<div class="container">
 				<div class="form-container">
