changed file ordering in script

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux.">
-	<script src="./assets/bootstrap/bootstrap.bundle.js" defer ></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js" defer ></script>
 	<script src="./assets/maugallery.js" defer ></script>
 	<script src="./assets/scripts.js" defer ></script>
+	<link rel="manifest" href="manifest.json">
+	<link rel="icon" href="assets/images/favicon.ico">
 	<title>Nina Carducci</title>
 </head>
 <body>
