added manifest.json to correction PWA error

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
 	<meta name="description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux.">
+	<meta name="theme-color" content="#f6d2b8">
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/bootstrap/bootstrap.bundle.js" defer ></script>
 	<script src="./assets/maugallery.js" defer ></script>
@@ -27,7 +28,7 @@
 					<li><a href="#gallery">Galerie</a></li>
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="Logo instagram" width="40" height="40"></a></li>
+					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram-512.png" alt="Logo instagram" width="512" height="512"></a></li>
 				</ul>
 			</nav>
 		</div>
@@ -63,7 +64,7 @@
 	<main>
 		<section id="about">
 				<div class="picture left">
-					<img src="./assets/images/nina-min.png" alt="image Nina Carducci" width="382" height="382">
+					<img src="./assets/images/nina-min.png" alt="image Nina Carducci" width="514" height="513">
 				</div>
 				<div id="about-me">
 					<h2 class="about-me__title">A propos de moi</h2>
@@ -155,7 +156,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera-min.png" alt="Camera" width="420" height="420" >
+					<img src="./assets/images/camera-min.png" alt="Camera" width="514" height="513" >
 				</div>
 			</div>
 		</section>
