Optimized image files improve loading times

--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/banner-slide-1-man-min.jpg" class="d-block w-100" alt="Banner image1 man" width="956" height="446">
+						<img src="./assets/images/slider/banner-slide-1-man-min.webp" class="d-block w-100" alt="Banner image1 man" width="956" height="446">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/banner-slide-2-peoples-min.jpg" class="d-block w-100" alt="Banner image2 peoples" width="956" height="446">
+						<img src="./assets/images/slider/banner-slide-2-peoples-min.webp" class="d-block w-100" alt="Banner image2 peoples" width="956" height="446">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/banner-slide-3-marriage-min.jpg" class="d-block w-100" alt="Banner image3 marriage" width="956" height="446">
+						<img src="./assets/images/slider/banner-slide-3-marriage-min.webp" class="d-block w-100" alt="Banner image3 marriage" width="956" height="446">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" width="956" height="446">
