saved all by webp format for image files

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 	<main>
 		<section id="about">
 				<div class="picture left">
-					<img src="./assets/images/nina-min.png" alt="image Nina Carducci" width="514" height="513">
+					<img src="./assets/images/nina-min.webp" alt="image Nina Carducci" width="514" height="513">
 				</div>
 				<div id="about-me">
 					<h2 class="about-me__title">A propos de moi</h2>
@@ -77,15 +77,15 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-arron-paul-min.jpg" alt="concert-arron-paul" width="466" height="621"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-ali-morshedlou-min.jpg" alt="entreprise ali morshedlou" width="466" height="699"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-jason-goodman-min.jpg" alt="entreprise jason goodman" width="466" height="315"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-hannah-busing-min.jpg" alt="mariage hannah busing" width="466" height="373"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_men-min.jpg" alt="portrait men" width="466" height="698"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-jakob-owens-min.jpg" alt="mariage jakob owens" width="466" height="699"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_women-min.jpg" alt="portrait women" width="466" height="700"/>
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill-min.jpg" alt="concert austin neill" width="466" height="311"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-mateus-campos-felipe-min.jpg" alt="entreprise mateus campos felipe" width="466" height="285"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-arron-paul-min.webp" alt="concert-arron-paul" width="466" height="621"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-ali-morshedlou-min.webp" alt="entreprise ali morshedlou" width="466" height="699"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-jason-goodman-min.webp" alt="entreprise jason goodman" width="466" height="315"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-hannah-busing-min.webp" alt="mariage hannah busing" width="466" height="373"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_men-min.webp" alt="portrait men" width="466" height="698"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-jakob-owens-min.webp" alt="mariage jakob owens" width="466" height="699"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_women-min.webp" alt="portrait women" width="466" height="700"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill-min.webp" alt="concert austin neill" width="466" height="311"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-mateus-campos-felipe-min.webp" alt="entreprise mateus campos felipe" width="466" height="285"/>
 				</div>
 			</div>
 			<div class="quote">
@@ -156,7 +156,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera-min.png" alt="Camera" width="514" height="513" >
+					<img src="./assets/images/camera-min.webp" alt="Camera" width="514" height="513" >
 				</div>
 			</div>
 		</section>
