compressed css, js files

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="manifest" href="manifest.json">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
+	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
@@ -12,9 +12,9 @@
 	<meta name="description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux.">
 	<meta name="theme-color" content="#f6d2b8">
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-	<script src="./assets/bootstrap/bootstrap.bundle.js" defer ></script>
-	<script src="./assets/maugallery.js" defer ></script>
-	<script src="./assets/scripts.js" defer ></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer ></script>
+	<script src="./assets/maugallery.min.js" defer ></script>
+	<script src="./assets/scripts.min.js" defer ></script>
 	<link rel="icon" href="assets/images/favicon.ico">
 	<title>Nina Carducci</title>
 </head>
@@ -28,7 +28,7 @@
 					<li><a href="#gallery">Galerie</a></li>
 					<li><a href="#services">Service</a></li>
 					<li><a href="#contact">Contact</a></li>
-					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram-512.png" alt="Logo instagram" width="512" height="512"></a></li>
+					<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram-512.webp" alt="Logo instagram" width="512" height="512"></a></li>
 				</ul>
 			</nav>
 		</div>
