--- a/index.html
+++ b/index.html
@@ -41,13 +41,22 @@
 				</div>
 				<div class="carousel-inner">
 					<div class="carousel-item active">
-						<img src="./assets/images/slider/banner-slide-1-man-min.webp" class="d-block w-100" alt="Banner image1 man" width="956" height="446">
+						<img src="./assets/images/slider/banner-slide-1-man-m.webp" class="d-block w-100" 
+						srcset="./assets/images/slider/banner-slide-1-man-s.webp 500w, ./assets/images/slider/banner-slide-1-man-m.webp 1200w"
+						sizes="(max-width: 500px) 500px, 1200px"
+						alt="Banner image 1 man" >
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/banner-slide-2-peoples-min.webp" class="d-block w-100" alt="Banner image2 peoples" width="956" height="446">
+						<img src="./assets/images/slider/banner-slide-2-peoples-m.webp" class="d-block w-100" 
+						srcset="./assets/images/slider/banner-slide-2-peoples-s.webp 500w, ./assets/images/slider/banner-slide-2-peoples-m.webp 1200w"
+						sizes="(max-width: 500px) 500px, 1200px"
+						alt="Banner image 2 peoples">
 					</div>
 					<div class="carousel-item">
-						<img src="./assets/images/slider/banner-slide-3-marriage-min.webp" class="d-block w-100" alt="Banner image3 marriage" width="956" height="446">
+						<img src="./assets/images/slider/banner-slide-3-marriage-m.webp" class="d-block w-100"
+						srcset="./assets/images/slider/banner-slide-3-marriage-s.webp 500w, ./assets/images/slider/banner-slide-3-marriage-m.webp 1200w"
+						sizes="(max-width: 500px) 500px, 1200px"
+						alt="Banner image 3 marriage">
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" width="956" height="446">
@@ -68,7 +77,7 @@
 				</div>
 				<div id="about-me">
 					<h2 class="about-me__title">A propos de moi</h2>
-					<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
+					<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
 					<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 						C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 				</div>
@@ -77,15 +86,15 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-arron-paul-min.webp" alt="concert-arron-paul" width="466" height="621"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-ali-morshedlou-min.webp" alt="entreprise ali morshedlou" width="466" height="699"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-jason-goodman-min.webp" alt="entreprise jason goodman" width="466" height="315"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-hannah-busing-min.webp" alt="mariage hannah busing" width="466" height="373"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_men-min.webp" alt="portrait men" width="466" height="698"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-jakob-owens-min.webp" alt="mariage jakob owens" width="466" height="699"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_women-min.webp" alt="portrait women" width="466" height="700"/>
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill-min.webp" alt="concert austin neill" width="466" height="311"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-mateus-campos-felipe-min.webp" alt="entreprise mateus campos felipe" width="466" height="285"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-arron-paul-min.webp" alt="concert-arron-paul" width="466" height="621" loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-ali-morshedlou-min.webp" alt="entreprise ali morshedlou" width="466" height="699"  loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-jason-goodman-min.webp" alt="entreprise jason goodman" width="466" height="315"  loading="lazy"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-hannah-busing-min.webp" alt="mariage hannah busing" width="466" height="373"  loading="lazy"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_men-min.webp" alt="portrait men" width="466" height="698" loading="lazy"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-jakob-owens-min.webp" alt="mariage jakob owens" width="466" height="699" loading="lazy"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_women-min.webp" alt="portrait women" width="466" height="700" loading="lazy"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill-min.webp" alt="concert austin neill" width="466" height="311" loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-mateus-campos-felipe-min.webp" alt="entreprise mateus campos felipe" width="466" height="285"  loading="lazy"/>
 				</div>
 			</div>
 			<div class="quote">
@@ -143,8 +152,10 @@
 		<section id="contact">
 			<div class="container">
 				<div class="form-container">
-					<h3>Une question ? Une demande de devis ?</h3>
-					<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+					<div class="form-container__title">
+						<h3>Une question ? Une demande de devis ?</h3>
+						<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+					</div>
 					<form action="" method="post">
 						<label for="nom">Nom</label>
 						<input type="text" name="nom" id="nom">
@@ -156,7 +167,7 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera-min.webp" alt="Camera" width="514" height="513" >
+					<img src="./assets/images/camera-min.webp" alt="Camera" width="514" height="513"  loading="lazy" >
 				</div>
 			</div>
 		</section>
