--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer ></script>
 	<script src="./assets/maugallery.min.js" defer ></script>
-	<script src="./assets/scripts.min.js" defer ></script>
+	<script src="./assets/scripts.js" defer ></script>
 	<link rel="icon" href="assets/images/favicon.ico">
 	<title>Nina Carducci</title>
 </head>
@@ -43,20 +43,20 @@
 					<div class="carousel-item active">
 						<img src="./assets/images/slider/banner-slide-1-man-m.webp" class="d-block w-100" 
 						srcset="./assets/images/slider/banner-slide-1-man-s.webp 500w, ./assets/images/slider/banner-slide-1-man-m.webp 1200w"
-						sizes="(max-width: 500px) 500px, 1200px"
+						sizes="(max-width: 500px) 500px, 1200px" width="1200px" height="555px"
 						alt="Banner image 1 man" >
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/banner-slide-2-peoples-m.webp" class="d-block w-100" 
 						srcset="./assets/images/slider/banner-slide-2-peoples-s.webp 500w, ./assets/images/slider/banner-slide-2-peoples-m.webp 1200w"
-						sizes="(max-width: 500px) 500px, 1200px"
-						alt="Banner image 2 peoples" upload="lazy">
+						sizes="(max-width: 500px) 500px, 1200px" width="1200px" height="555px"
+						alt="Banner image 2 peoples" loading="lazy">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/banner-slide-3-marriage-m.webp" class="d-block w-100"
 						srcset="./assets/images/slider/banner-slide-3-marriage-s.webp 500w, ./assets/images/slider/banner-slide-3-marriage-m.webp 1200w"
-						sizes="(max-width: 500px) 500px, 1200px"
-						alt="Banner image 3 marriage" upload="lazy">
+						sizes="(max-width: 500px) 500px, 1200px" width="1200px" height="555px"
+						alt="Banner image 3 marriage" loading="lazy" >
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" width="956" height="446">
@@ -86,15 +86,15 @@
 			<h2 class="title">Portfolio</h2>
 			<div class="container py-3">
 				<div class="gallery" style="display: none">
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-arron-paul-min.webp" alt="concert-arron-paul" width="466" height="621" upload="lazy"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-ali-morshedlou-min.webp" alt="entreprise ali morshedlou" width="466" height="699" upload="lazy"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-jason-goodman-min.webp" alt="entreprise jason goodman" width="466" height="315"  upload="lazy"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-hannah-busing-min.webp" alt="mariage hannah busing" width="466" height="373"  upload="lazy"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_men-min.webp" alt="portrait men" width="466" height="698"  upload="lazy"/>
-					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-jakob-owens-min.webp" alt="mariage jakob owens" width="466" height="699"  upload="lazy"/>
-					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_women-min.webp" alt="portrait women" width="466" height="700"  upload="lazy"/>
-					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill-min.webp" alt="concert austin neill" width="466" height="311"  upload="lazy"/>
-					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-mateus-campos-felipe-min.webp" alt="entreprise mateus campos felipe" width="466" height="285"  upload="lazy"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-arron-paul-min.webp" alt="concert-arron-paul" width="466" height="621" loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-ali-morshedlou-min.webp" alt="entreprise ali morshedlou" width="466" height="699" loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-jason-goodman-min.webp" alt="entreprise jason goodman" width="466" height="315"  loading="lazy"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-hannah-busing-min.webp" alt="mariage hannah busing" width="466" height="373"  loading="lazy"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_men-min.webp" alt="portrait men" width="466" height="698"  loading="lazy"/>
+					<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/marriage-jakob-owens-min.webp" alt="mariage jakob owens" width="466" height="699"  loading="lazy"/>
+					<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait_women-min.webp" alt="portrait women" width="466" height="700"  loading="lazy"/>
+					<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill-min.webp" alt="concert austin neill" width="466" height="311"  loading="lazy"/>
+					<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/entreprise-mateus-campos-felipe-min.webp" alt="entreprise mateus campos felipe" width="466" height="285"  loading="lazy"/>
 				</div>
 			</div>
 			<div class="quote">
@@ -167,10 +167,11 @@
 					</form>
 				</div>
 				<div class="picture right">
-					<img src="./assets/images/camera-min.webp" alt="Camera" width="514" height="513" upload="lazy" >
+					<img src="./assets/images/camera-min.webp" alt="Camera" width="514" height="513" loading="lazy" >
 				</div>
 			</div>
 		</section>
 	</main>
+	
 </body>
 </html>
