--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="manifest" href="manifest.json">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
-	<link rel="stylesheet" href="./assets/style.min.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
@@ -12,8 +12,8 @@
 	<meta name="description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux.">
 	<meta name="theme-color" content="#f6d2b8">
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
-	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer ></script>
-	<script src="./assets/maugallery.min.js" defer ></script>
+	<script src="./assets/bootstrap/bootstrap.bundle.js" defer ></script>
+	<script src="./assets/maugallery.js" defer ></script>
 	<script src="./assets/scripts.js" defer ></script>
 	<link rel="icon" href="assets/images/favicon.ico">
 	<title>Nina Carducci</title>
@@ -50,13 +50,13 @@
 						<img src="./assets/images/slider/banner-slide-2-peoples-m.webp" class="d-block w-100" 
 						srcset="./assets/images/slider/banner-slide-2-peoples-s.webp 500w, ./assets/images/slider/banner-slide-2-peoples-m.webp 1200w"
 						sizes="(max-width: 500px) 500px, 1200px" width="1200px" height="555px"
-						alt="Banner image 2 peoples" loading="lazy">
+						alt="Banner image 2 peoples">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/banner-slide-3-marriage-m.webp" class="d-block w-100"
 						srcset="./assets/images/slider/banner-slide-3-marriage-s.webp 500w, ./assets/images/slider/banner-slide-3-marriage-m.webp 1200w"
 						sizes="(max-width: 500px) 500px, 1200px" width="1200px" height="555px"
-						alt="Banner image 3 marriage" loading="lazy" >
+						alt="Banner image 3 marriage" >
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" width="956" height="446">
