--- a/index.html
+++ b/index.html
@@ -50,13 +50,13 @@
 						<img src="./assets/images/slider/banner-slide-2-peoples-m.webp" class="d-block w-100" 
 						srcset="./assets/images/slider/banner-slide-2-peoples-s.webp 500w, ./assets/images/slider/banner-slide-2-peoples-m.webp 1200w"
 						sizes="(max-width: 500px) 500px, 1200px" width="1200px" height="555px"
-						alt="Banner image 2 peoples">
+						alt="Banner image 2 peoples" loading="lazy">
 					</div>
 					<div class="carousel-item">
 						<img src="./assets/images/slider/banner-slide-3-marriage-m.webp" class="d-block w-100"
 						srcset="./assets/images/slider/banner-slide-3-marriage-s.webp 500w, ./assets/images/slider/banner-slide-3-marriage-m.webp 1200w"
 						sizes="(max-width: 500px) 500px, 1200px" width="1200px" height="555px"
-						alt="Banner image 3 marriage" >
+						alt="Banner image 3 marriage"loading="lazy" >
 					</div>
 				</div>
 				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev" width="956" height="446">
