modified twitter card and opengraph

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<meta property="og:description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux." />
 	<meta property="og:image" content="https://raw.githubusercontent.com/yoonju88/Projet_9-NinaCarducci/main/assets/images/nina-opengraph.webp" />
 	<meta name="twitter:card" content="photograph" />
-	<meta name="twitter:site" content="@Nina Carducci" />
+	<meta name="twitter:site" content="@Ninacarducci" />
 	<meta name="twitter:title" content="Nina Carducci - photograph" />
 	<meta name="twitter:description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux." />
 	<meta name="twitter:image" content="https://raw.githubusercontent.com/yoonju88/Projet_9-NinaCarducci/main/assets/images/nina_twitter.webp" />
