added fb app_id

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<link rel="icon" href="assets/images/favicon.ico">
 	<meta property="og:site_name" content="Nina Carducci" />
 	<meta property="og:type" content="website" />
+	<meta property="fb:app_id" content="your_app_id_goes_to_web_site_nina_carducci">
 	<meta property="og:url" content="https://yoonju88.github.io/Projet_9-NinaCarducci/" />
 	<meta property="og:title" content="Nina Carducci - photograph" />
 	<meta property="og:description" content="Nina Carducci est une photographe française, spécialisée dans la prise de vos moments les plus précieux." />
