added meta tag - permissions policy

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<script src="./assets/maugallery.js" defer ></script>
 	<script src="./assets/scripts.js" defer ></script>
 	<link rel="icon" href="assets/images/favicon.ico">
+	<meta http-equiv="Permissions-Policy" content="interest-cohort=()"/>
 	<meta property="og:site_name" content="Nina Carducci" />
 	<meta property="og:type" content="website" />
 	<meta property="fb:app_id" content="your_app_id_goes_here">
